<resources>
    <string name="app_name">PegJump</string>
    <string name="play_button">Play!</string>
    <string name="name_spaced">Peg Jump!</string>
    <string name="settings">Settings</string>
    <string name="settings_label">Settings</string>
    <string name="pause_menu_label">Game Paused</string>
    <string name="resume_button_label">Resume!</string>
    <string name="main_menu_button_label">Exit!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="operation_plus">+</string>
    <string name="operation_minus">-</string>
    <string name="restart_button_label">Restart!</string>
    <string name="winning_message">YOU FREAKIN\' WIN!</string>
    <string name="prev_best_label">Previous best: %d</string>
    <string name="prev_best_missing_label">Previous best: Na</string>
    <string name="num_moves_label">Moves: %d</string>
    <string name="peg_points_label">PegPoints: %d</string>
    <string name="peg_label">%d</string>
    <string name="win_screen_begginning_sentence">You won in</string>
    <string name="win_screen_end_sentence">moves!</string>
    <string name="pause_music_mute_label">Music: </string>
    <string name="pause_sfx_label">Sfx: </string>
</resources>
