<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:orientation="vertical"
    tools:context="hk.ust.cse.comp4521.pegjump.PauseMenu">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/pause_menu_label"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="34dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/pauseMusicMuteSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:checked="false"
            android:switchPadding="10dp"
            android:text="@string/pause_music_mute_label"
            android:textColorLink="?attr/actionModeSplitBackground"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/pauseSfxMuteSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:checked="false"
            android:switchPadding="42dp"
            android:text="@string/pause_sfx_label"
            android:textColorLink="?attr/actionModeSplitBackground"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/restartButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/restart_button_label"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exitToMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/main_menu_button_label" />

        <Button
            android:id="@+id/resumeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/resume_button_label" />
    </LinearLayout>

</LinearLayout>
